--- a/public/source/assets/style.css
+++ b/public/source/assets/style.css
@@ -10,14 +10,6 @@ body, row
     margin: 0;
 }
 
-.bs-contain
-{
-    margin: 0;
-    padding: 0;
-    /* width: 95vw; */
-    margin: 0;
-}
-
 a
 {
     text-decoration: none;
@@ -161,15 +153,18 @@ a
     color: gray;
 } 
 
-#design-body
+.bs-contain
 {
-    /* background-color: rgba(245, 245, 245, 0.959); */
+    margin: 0;
+    padding: 0;
+    /* width: 95vw; */
+    margin: 0;
 }
 
 .design-title
 {
     text-align: center;
-    margin-top: 12px;
+    /* margin-top: 8px; */
     font-size: 20px;
     font-weight: 100;
 }
@@ -212,11 +207,57 @@ a
     margin: 5px 0;
 }
 
+.image-icons
+{
+    margin: 0 5px;
+    margin-top: 10px;
+}
+
 #list h1
 {
     color: rgb(168, 168, 168);
     font-weight: 100;
+}
 
+
+/* DESIGN LEGEND---------------------------------- */
+
+#legend
+{
+    padding: 20px;
+    margin-top: 30px;
+    background-color: rgb(54, 54, 54);
+}
+
+.legend-title
+{
+    font-size: 40px;
+    font-weight: 300; 
+    color: rgb(221, 221, 221);
+    /* padding: 30px 0; */
+}
+
+.icon-bank
+{
+    padding: 0 30px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.legend-item
+{
+    font-weight: 100;
+    font-size: 18px;
+    color: rgb(219, 219, 219);
+    line-height: 15px;
+    align-content: center;
+    margin: 30px 0;
+}
+
+.legend-icons
+{
+    margin-left: 20px;
+    margin-right: 50px;
 }
 
 /* DEV HTML PAGE---------------------------- */
