--- a/public/source/assets/style.css
+++ b/public/source/assets/style.css
@@ -268,7 +268,7 @@ a
 
 #dev-body
 {
-    height: 70vh;
+    height: 60vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -285,6 +285,32 @@ a
     text-decoration: none;
     color: gray;
     font-weight: 100;
+}
+
+.dev-flex-wrap
+{   
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.flex-a
+{   
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-top: 5px;
+    /* justify-content: center; */
+}
+
+.flex-a a 
+{
+    margin-left: 15px;
+}
+
+.bstrap
+{
+    /* padding-left: 20px; */
 }
 
 .nav-indicate
